# metradar

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: download_data_from_cmadaas.ipynb  qc_wradlib_clutter_cn.ipynb
metradar/graph/: draw_comp_mosaic.py
resources/stations/: radars.csv
